# CedSchedulerApp

./: .gitignore  pyproject.toml
cedschedulerapp/master/: app.py  args.py  enums.py  manager.py  schemas.py
cedschedulerapp/master/client/: base_client.py  benchmark_parser.py  inference_client.py  training_client.py  types.py
cedschedulerapp/worker/: __init__.py  app.py  args.py  enums.py  schemas.py  service.py  types.py  utils.py
scripts/: deploy.sh
